gitops/environments/staging/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shopdemo-staging
  labels:
    app.kubernetes.io/part-of: shopdemo
    app.kubernetes.io/managed-by: gitops
    shopdemo.io/environment: staging
