gitops/environments/staging/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: shopdemo-staging
  labels:
    app.kubernetes.io/part-of: shopdemo
    app.kubernetes.io/managed-by: gitops
    shopdemo.io/environment: staging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-same-namespace
  namespace: shopdemo-staging
  labels:
    app.kubernetes.io/part-of: shopdemo
    app.kubernetes.io/managed-by: gitops
    shopdemo.io/environment: staging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
